dnl Process this file with autoconf to produce a configure script

AC_INIT(cpp/ftsclient.cpp)

. ../JMAX-VERSION

FTSCLIENT_MAJOR_VERSION=${JMAX_MAJOR_VERSION}
FTSCLIENT_MINOR_VERSION=${JMAX_MINOR_VERSION}
FTSCLIENT_PATCH_VERSION=${JMAX_PATCH_VERSION}
FTSCLIENT_VERSION_STATUS=${JMAX_VERSION_STATUS}
FTSCLIENT_VERSION=${FTSCLIENT_MAJOR_VERSION}.${FTSCLIENT_MINOR_VERSION}.${FTSCLIENT_PATCH_VERSION}${FTSCLIENT_VERSION_STATUS}

VERSION=${FTSCLIENT_VERSION}
PACKAGE=ftsclient

AM_INIT_AUTOMAKE($PACKAGE,$VERSION, no-define)

AC_PREFIX_DEFAULT(/usr)

dnl AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CXX
if test "$ac_cv_prog_cxx" = "no" ; then
   AC_MSG_ERROR([*** No C++ compiler])
fi

CXXFLAGS="-I../include"

dnl Check for debug
AC_ARG_ENABLE(debug,
  [  --enable-debug[=DEBUG]   compile with debug [default=no]],
  debug="yes",
  debug="no")
case "$debug" in
 yes)
  CXXFLAGS="$CXXFLAGS -g"
  AC_DEFINE(DEBUG,1,[Define to enable debug])
  ;;
esac

AC_PROG_INSTALL
AC_LIBTOOL_DLOPEN
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(socket)

dnl Check for Java compiler
dnl AC_PROG_JAVAC
JAVACX=javac
AC_SUBST(JAVACX)
JAVACFLAGSX=
case "$debug" in
 yes)
  JAVACFLAGSX="-g"
  ;;
esac
AC_SUBST(JAVACFLAGSX)

TOP_DIR_PATH=`pwd`
AC_SUBST(TOP_DIR_PATH)

AC_OUTPUT(
Makefile
cpp/Makefile
java/Makefile
java/ircam/Makefile
java/ircam/fts/Makefile
java/ircam/fts/client/Makefile
include/Makefile
include/fts/Makefile
include/fts/client/Makefile
tests/Makefile
tests/cpp/Makefile
tests/java/Makefile
include/fts/client/version.h
)
