dnl Process this file with autoconf to produce a configure script

AC_INIT(java/ircam/fts/client/FtsObject.java)

. $srcdir/../JMAX-VERSION

FTSCLIENT_MAJOR_VERSION=${JMAX_MAJOR_VERSION}
FTSCLIENT_MINOR_VERSION=${JMAX_MINOR_VERSION}
FTSCLIENT_PATCH_VERSION=${JMAX_PATCH_VERSION}
FTSCLIENT_VERSION_STATUS=${JMAX_VERSION_STATUS}
FTSCLIENT_VERSION=${FTSCLIENT_MAJOR_VERSION}.${FTSCLIENT_MINOR_VERSION}.${FTSCLIENT_PATCH_VERSION}${FTSCLIENT_VERSION_STATUS}

VERSION=${FTSCLIENT_VERSION}
PACKAGE=ftsclient

AM_INIT_AUTOMAKE($PACKAGE,$VERSION, no-define)

AC_PREFIX_DEFAULT(/usr)

AM_CONFIG_HEADER(cpp/include/config.h)

dnl Checks for programs.
AC_PROG_CXX
if test "$ac_cv_prog_cxx" = "no" ; then
   AC_MSG_ERROR([*** No C++ compiler])
fi

CXXFLAGS=

dnl Check for debug
AC_ARG_ENABLE(debug,
  [  --enable-debug[=DEBUG]   compile with debug [default=no]],
  debug="yes",
  debug="no")
case "$debug" in
 yes)
  CXXFLAGS="$CXXFLAGS -g"
  AC_DEFINE(DEBUG,1,[Define to enable debug])
  ;;
esac

AC_PROG_INSTALL
AC_LIBTOOL_DLOPEN
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HAVE_HEADERS( dlfcn.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(socket)


dnl Check for Java compiler
AC_ARG_WITH(javac,
  [  --with-javac=JAVAC       give java compiler (optional)],
  [JAVAC="$withval"],
  [JAVAC=javac])
AC_ARG_WITH(java,
  [  --with-java=JAVA         give java virtual machine (optional)],
  [JAVA="$withval"],
  [JAVA=java])

AC_SUBST(JAVAC)

dnl Want to compile java?
want_java_compilation="yes"
AC_ARG_ENABLE(java-compilation,
[
  --enable-java-compilation[=value] compile jMax java part [default=yes]],
  [case "${enableval}" in
	yes) want_java_compilation="yes" ;;
	no)  want_java_compilation="no" ;;
	*) AC_MSG_ERROR(bad value ${enableval} for --enable-java-compilation) ;;
  esac],
  [want_java_compilation="yes"])	    

AM_CONDITIONAL(COND_COMPILE_JAVA, test "$want_java_compilation" = "yes")

dnl Check for Java compiler
dnl AC_PROG_JAVAC
JAVACX=$JAVAC
AC_SUBST(JAVACX)
JAVACFLAGSX=
case "$debug" in
 yes)
  JAVACFLAGSX="-g"
  ;;
esac
AC_SUBST(JAVACFLAGSX)

TOP_DIR_PATH=`pwd`
AC_SUBST(TOP_DIR_PATH)

AC_OUTPUT(
Makefile
cpp/Makefile
cpp/include/Makefile
cpp/include/fts/Makefile
cpp/include/fts/client/Makefile
cpp/include/fts/client/version.h
cpp/src/Makefile
java/Makefile
java/ircam/Makefile
java/ircam/fts/Makefile
java/ircam/fts/client/Makefile
)
