
pkgimgdir=$(pkgdatadir)/images
pkgimg_DATA=\
Splash.gif \
arrow_down.gif \
arrow_left.gif \
arrow_right.gif \
arrow_up.gif \
at_work.gif \
audioin_on.gif \
audioin_off.gif \
cursor_bang_mini.gif \
cursor_in.gif \
cursor_out.gif \
cursor_patcher.gif \
cursor_standard.gif \
dsp_off.gif \
dsp_on.gif \
dsp_undef.gif \
forum.gif \
hot.gif \
info.gif \
ircam.gif \
jmax_app.gif \
jmax_icon.gif \
jmax_logo_small.gif \
jmax_logo_small_transp.gif \
jmax_logo_tiny.gif \
linux.gif \
little_down_arrow.gif \
little_minus.gif \
little_plus.gif \
little_up_arrow.gif \
mini_icon_jmax.gif \
mini_icon_pat.gif \
more_objects.gif \
new.gif \
no_audioin.gif \
project_root.gif \
question.gif \
stop.gif \
to_save.gif \
tool_edit_mode.gif \
tool_err.gif \
tool_ext.gif \
tool_in.gif \
tool_lock_mode.gif \
tool_out.gif \
tool_patcher.gif \
tool_text.gif \
tool_up.gif \
tux.gif \
warning.gif 

EXTRA_DIST= $(pkgimg_DATA)
