ftsdir=$(includedir)/fts
fts_HEADERS= \
array.h \
atom.h \
atomfile.h \
audio.h \
audiofile.h \
bytestream.h \
class.h \
client.h \
connection.h \
dsp.h \
errobj.h \
expression.h \
fifo.h \
file.h \
fifo.h \
fpe.h \
ftl.h \
ftlmem.h \
fts.h \
hashtable.h \
iterator.h \
label.h \
list.h \
malloc.h \
message.h \
midi.h \
midifile.h \
object.h \
objectlist.h \
objectset.h \
package.h \
param.h \
patcher.h \
post.h \
predefsymbols.h \
project.h \
property.h \
sched.h \
stack.h \
status.h \
symbol.h \
time.h \
tuple.h \
types.h \
update.h \
variable.h
