
ftsdir=$(includedir)/fts
fts_HEADERS= \
array.h \
atom.h \
atomfile.h \
audio.h \
audiofile.h \
binaryprotocol.h \
bytestream.h \
class.h \
client.h \
config.h \
config-ac.h \
config-macosx.h \
config-win32.h \
connection.h \
dsp.h \
errobj.h \
expression.h \
fifo.h \
file.h \
fifo.h \
fpe.h \
ftl.h \
ftlmem.h \
ftmext.h \
fts.h \
function.h \
hashtable.h \
iterator.h \
label.h \
list.h \
malloc.h \
message.h \
midi.h \
midievent.h \
midifile.h \
object.h \
objectlist.h \
objectset.h \
outlet.h \
package.h \
param.h \
patcher.h \
patcherobject.h \
post.h \
predefsymbols.h \
preset.h \
project.h \
property.h \
sched.h \
socketstream.h \
stack.h \
status.h \
symbol.h \
thread.h \
timebase.h \
tokenizer.h \
tuple.h \
types.h \
update.h \
variable.h
