noinst_HEADERS= \
abstraction.h \
audio.h \
bmaxfile.h \
class.h \
client.h \
connection.h \
dspgraph.h \
errobj.h \
fpe.h \
label.h \
message.h \
midi.h \
object.h \
package.h \
parser.h \
patcher.h \
patfile.h \
platform.h \
property.h \
protocol.h \
selection.h \
sigconn.h \
template.h \
tokenizer.h \
time.h \
variable.h 
