noinst_HEADERS= \
abstraction.h \
audio.h \
audioconfig.h \
bmaxfile.h \
class.h \
client.h \
clientmanager.h \
connection.h \
config.h \
dsp.h \
dspgraph.h \
errobj.h \
file.h \
fpe.h \
label.h \
loader.h \
message.h \
midi.h \
object.h \
outlet.h \
package.h \
parser.h \
patcher.h \
patcherobject.h \
patfile.h \
platform.h \
property.h \
protocol.h \
sched.h \
selection.h \
sigconn.h \
template.h \
timebase.h \
variable.h 
