SUBDIRS= jMaxProject.pbproj jMaxProject.xcode

EXTRA_DIST= \
	background.gif \
	icon128.gif \
	icon32.gif \
	icon48.gif \
	jmax_file16.gif \
	jmax_file32.gif \
	jmax_file48.gif \
	jmax_file.icns \
	jmax.icns \ \
	JMaxWrapper.java \
	libcontrol-info.plist \
	libdata-info.plist \
	libdtd-info.plist \
	libfts-info.plist \
	libfunctions-info.plist \
	libguiobj-info.plist \
	libio-info.plist \
	libispw-info.plist \
	libispwmath-info.plist \
	libmacosx-info.plist \
	libmidi-info.plist \
	libnumeric-info.plist \
	libsequence-info.plist \
	libsignal-info.plist \
	libsystem-info.plist \
	libutils-info.plist \
	parser-tokenizer-info.plist \
	SDK-info.plist \
	version-info.plist 

