
tutorialdir=$(pkgdatadir)/tutorials/basics
tutorial_DATA=\
 BASICS.jmax \
 bang.tutorial.jmax \
 comment.tutorial.jmax \
 coucou.jmax \
 labels.tutorial.jmax \
 lists.tutorial.jmax \
 message.tutorial.jmax \
 metro.tutorial.jmax \
 numbers.tutorial.jmax \
 order.tutorial.jmax \
 order1.tutorial.jmax \
 order2.tutorial.jmax \
 order3.tutorial.jmax \
 patchers.tutorial.jmax \
 project.env \
 recursion.tutorial.jmax \
 system.summary.jmax \
 variables.tutorial.jmax 

EXTRA_DIST= $(tutorial_DATA)
