
java_JAVA= \
Closure.java					\
Continuation.java				\
Environment.java				\
InputPort.java					\
JavaMethod.java					\
Macro.java					\
Pair.java					\
Primitive.java					\
Procedure.java					\
Scheme.java					\
SchemePrimitives.java				\
SchemeUtils.java

JAVAC=@JAVAC@
JAVAROOT=@top_srcdir@/java/src
CLASSPATH_ENV=CLASSPATH=@top_srcdir@/java/src:@top_srcdir@/java/lib/jacl/jacl.jar:@top_srcdir@/java/lib/jacl/tcljava.jar
